Set text sec1_1

--- a/Dissertation/part1.tex
+++ b/Dissertation/part1.tex
@@ -16,8 +16,7 @@
 
 Задача исследования – улучшить показатели качества электрической энергии (ПКЭ) в электрических сетях систем электроснабжения, совершенствуя средства измерительных устройств для определения гармоник. При разработке технического устройства должны учитываться ПКЭ  согласно действующим нормативам. 
 
-Введен целый ряд нормативных документов (МЭК, ГОСТ). Изменение стандартов в области измерений электрической энергии показано на рисунке.
-\cite{ГОСТ30804.4.30-2013, ГОСТ30804.4.7-2013, ГОСТ32144-2013, ГОСТР8.655-2009, ГОСТР51317.4.15-2012,ГОСТ33073-2014,ГОСТ8.622-2013} 
+Введен целый ряд нормативных документов (МЭК, ГОСТ). Изменение стандартов в области измерений электрической энергии показано на рисунке \cite{ГОСТ30804.4.30-2013, ГОСТ30804.4.7-2013, ГОСТ32144-2013, ГОСТР8.655-2009, ГОСТР51317.4.15-2012,ГОСТ33073-2014,ГОСТ8.622-2013}. 
  
 \begin{figure}[ht]
 	\centerfloat{
@@ -41,7 +40,28 @@
 
 % [196 - ГОСТ 8.622-2013 Государственная система обеспечения единства измерений (ГСИ). Испытательное оборудование для определения коэффициента проникания тест-аэрозоля через средства индивидуальной защиты органов дыхания. Методика аттестации [Электронный ресурс] / Режим доступа: http://docs.cntd.ru/document/1200108162]
 
+Основополагающим нормативным документом в Российской Федерации, регламентирующим положения связанные с КЭ в Российской Федерации, был ГОСТ 13109–97 \cite{ГОСТ13109-97}. 
+% [1 - ГОСТ 13109-97 Электрическая энергия. Совместимость технических средств электромагнитная. Нормы качества электрической энергии в системах электроснабжения общего назначения Электронный ресурс] – Режим доступа: http://docs.cntd.ru/document/1200006034]
 
+Стандарт не отвечал современным реалиям и заменен на ГОСТ 32144-2013 \cite{ГОСТ32144-2013}, действует с 01.07.2014 г. приказом Росстандарта. Российский стандарт соответствует европейскому ЕN 50160:2010 «Характеристики напряжения электричества, поставляемого общественными распределительными сетями» \cite{ЕN50160:2010}. 
+% [11 - 11.	EN 50160:2010 Voltage characteristics of electricity supplied by public electricity networks [Электронный ресурс] / Режим доступа: https://infostore.saiglobal.com/preview/98699522296.pdf?sku=859794_saig_nsai_nsai_2045468]
+
+Действующий зарубежный стандарт DIN EN 50160-2011 \cite{DINEN50160-2011}.
+
+Новый стандарт ГОСТ 32144–2013 по требованиям к КЭ учитывает рекомендации положений международных стандартов и новых национальных стандартов по методам и средствам измерения и оценки ПКЭ, а также сближает структуру и положения данного стандарта с европейским стандартом ЕN 50160:2010.
+Определение понятия средства измерений (СИ) в ГОСТ 30804.4.7-2013 \cite{ГОСТ30804.4.7-2013}.
+% [4 - ГОСТ 30804.4.7-2013 (IEC 61000-4-7:2009) Совместимость технических средств электромагнитная. Общее руководство по средствам измерений и измерениям гармоник и интергармоник для систем электроснабжения и подключаемых к ним технических средств (с Поправкой) [Электронный ресурс] / Режим доступа: http://docs.cntd.ru/document/1200103652]
+
+Некоторые принципиальные отличия  ГОСТ 32144–2013 \cite{ГОСТ32144-2013} от предыдущего стандарта ГОСТ 13109–97 \cite{ГОСТ13109-97}: 
+%\noindent Маркированный список:
+\begin{itemize}
+	\item Отличие по интервалам усреднения показателям качества электроэнергии (отклонение частоты – 10 сек., вместо 20 сек. в ГОСТ 13109–97; не симметрия напряжения – интервал усреднения 10 мин., вместо 3 сек. в ГОСТ 13109–97; гармонические составляющие напряжения – 10 мин., вместо 3 сек. в ГОСТ 13109–97) с интервалом периода в одну неделю, вместо суток в ГОСТ 13109–97.
+	\item Измерения согласно ГОСТ 30804.4.30–2013 (IEC 61000-4-30:2008) \cite{ГОСТ30804.4.30-2013} и ГОСТ 30804.4.7–2013 (IEC 61000-4-7:2009) \cite{ГОСТ30804.4.7-2013}.
+	\item Для медленных изменений напряжения исключены режимы наименьших и наибольших нагрузок.
+	\item Добавлены таблицы классификации провалов напряжения по остаточному напряжению.
+\end{itemize}
+% [179 - ГОСТ 30804.4.30-2013 (IEC 61000-4-30:2008) Электрическая энергия. Совместимость технических средств электромагнитная. Методы измерений показателей качества электрической энергии (с Поправкой) [Электронный ресурс] / Режим доступа: http://docs.cntd.ru/document/1200104665]
+% [4 - ГОСТ 30804.4.7-2013 (IEC 61000-4-7:2009) Совместимость технических средств электромагнитная. Общее руководство по средствам измерений и измерениям гармоник и интергармоник для систем электроснабжения и подключаемых к ним технических средств (с Поправкой) [Электронный ресурс] / Режим доступа: http://docs.cntd.ru/document/1200103652]
 
 
 
