--- a/biblio/author.bib
+++ b/biblio/author.bib
@@ -457,4 +457,23 @@
   urldate      = {2019-12-06},
 }
 
+@Standard{DINEN50160-2011,
+  title      = {DIN EN 50160-2011 Voltage characteristics of electricity supplied by public distribution networks},
+  number     = {DIN EN 50160-2011},
+  year       = {2011},
+  url        = {http://www.gostinfo.ru/catalog/Details/?id=4579183},
+  annotation = {Действующий},
+  urldate    = {2019-12-06},
+}
+
+@Standard{ЕN50160:2010,
+  title      = {EN 50160:2010 Voltage characteristics of electricity supplied by public electricity networks},
+  number     = {EN 50160:2010},
+  year       = {2010},
+  url        = {https://infostore.saiglobal.com/preview/98699522296.pdf?sku=859794_saig_nsai_nsai_2045468},
+  annotation = {EN 50160:2010 недействующий, DIN EN 50160-2011 действующий},
+  file       = {98699522296.pdf:files/674/98699522296.pdf:application/pdf},
+  urldate    = {2019-12-06},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
