SET biblio latex and text part1

--- a/biblio/author.bib
+++ b/biblio/author.bib
@@ -418,14 +418,13 @@
   urldate      = {2019-11-16},
 }
 
-@Standard{IEEE519-2014,
-  title      = {IEEE 519-2014 -- IEEE Recommended Practice and Requirements for Harmonic Control in Electric Power Systems},
-  year       = {2014},
-  url        = {https://standards.ieee.org/content/ieee-standards/en/standard/519-2014.html},
+@Standard{1159-2019,
+  title      = {1159-2019 - IEEE Recommended Practice for Monitoring Electric Power Quality},
+  year       = {2019},
+  url        = {https://standards.ieee.org/standard/1159-2019.html},
   annotation = {Действующий},
-  date       = {2014-03-27},
-  file       = {IEEE 519-2014 - Рекомендуемая практика и требования IEEE для гармонического управления в электроэнергетических системах:files/428/519-2014.html:text/html},
-  urldate    = {2019-12-04},
+  date       = {2019-08-13},
+  urldate    = {2019-12-11},
 }
 
 @Online{IEC,
@@ -474,6 +473,94 @@
   annotation = {EN 50160:2010 недействующий, DIN EN 50160-2011 действующий},
   file       = {98699522296.pdf:files/674/98699522296.pdf:application/pdf},
   urldate    = {2019-12-06},
+}
+
+@Online{IEEE_PES,
+  title   = {IEEE PES Power Quality Subcommittee},
+  file    = {IEEE PES Power Quality Subcommittee:files/419/pq.html:text/html},
+  url     = {https://site.ieee.org/pes-pq/},
+  urldate = {2019-12-07},
+}
+
+@Online{CIRED,
+  title   = {INTERNATIONAL CONFERENCE ON ELECTRICITY DISTRIBUTION},
+  url     = {https://site.ieee.org/pes-pq/},
+  urldate = {2019-12-07},
+}
+
+@Online{CIRED_CONFERENCE,
+  title   = {THE 25TH INTERNATIONAL CONFERENCE AND EXHIBITION ON ELECTRICITY DISTRIBUTION},
+  url     = {http://www.cired2019.org/page/about-cired},
+  urldate = {2019-12-07},
+}
+
+@Standard{IEEE_1159.3-2019,
+  title      = {1159.3-2019 - IEEE Recommended Practice for Power Quality Data Interchange Format (PQDIF)},
+  year       = {2019},
+  url        = {https://standards.ieee.org/standard/1159_3-2019.html},
+  annotation = {Действующий},
+  date       = {2019-05-01},
+  urldate    = {2019-12-12},
+}
+
+@Standard{IEEE_1159-2009,
+  title      = {IEEE 1159-2009 - IEEE Recommended Practice for Monitoring Electric Power Quality},
+  year       = {2009},
+  url        = {https://standards.ieee.org/standard/1159-2009.html},
+  annotation = {недействующий, заменен на 1159-2019},
+  urldate    = {2019-12-07},
+}
+
+@Standard{IEEE_1159-2019,
+  title      = {1159-2019 - IEEE Recommended Practice for Monitoring Electric Power Quality},
+  year       = {2019},
+  url        = {https://standards.ieee.org/standard/1159-2019.html},
+  annotation = {Действующий},
+  urldate    = {2019-12-11},
+}
+
+@Standard{1409-2012,
+  title      = {IEEE 1409-2012 - IEEE Guide for Application of Power Electronics for Power Quality Improvement on Distribution Systems Rated 1 kV Through 38 kV},
+  year       = {2012},
+  url        = {https://standards.ieee.org/standard/1409-2012.html},
+  annotation = {Действующий},
+  date       = {2012-03-29},
+  urldate    = {2019-12-12},
+}
+
+@Standard{IEEE_1453-2015,
+  title      = {IEEE 1453-2015 - IEEE Recommended Practice for the Analysis of Fluctuating Installations on Power Systems},
+  year       = {2015},
+  url        = {https://standards.ieee.org/standard/1453-2015.html},
+  annotation = {Действующий},
+  date       = {2015-10-30},
+  urldate    = {2019-12-12},
+}
+
+@Standard{IEEE_1250-2018,
+  title      = {IEEE 1250-2018 - IEEE Guide for Identifying and Improving Voltage Quality in Power Systems},
+  year       = {2018},
+  url        = {https://standards.ieee.org/standard/1250-2018.html},
+  annotation = {Действующий},
+  urldate    = {2019-12-12},
+}
+
+@Standard{IEEE_1564-2014,
+  title      = {IEEE 1564-2014 - IEEE Guide for Voltage Sag Indices},
+  year       = {2014},
+  url        = {https://standards.ieee.org/standard/1564-2014.html},
+  annotation = {Действующий},
+  date       = {2014-03-27},
+  urldate    = {2019-12-12},
+}
+
+@Standard{IEEE_519-2014,
+  title      = {IEEE 519-2014 - IEEE Recommended Practice and Requirements for Harmonic Control in Electric Power Systems},
+  year       = {2014},
+  url        = {https://standards.ieee.org/content/ieee-standards/en/standard/519-2014.html},
+  annotation = {Действующий},
+  date       = {2014-03-27},
+  urldate    = {2019-12-12},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
