--- a/Dissertation/part1.tex
+++ b/Dissertation/part1.tex
@@ -55,13 +55,65 @@
 Некоторые принципиальные отличия  ГОСТ 32144–2013 \cite{ГОСТ32144-2013} от предыдущего стандарта ГОСТ 13109–97 \cite{ГОСТ13109-97}: 
 %\noindent Маркированный список:
 \begin{itemize}
-	\item Отличие по интервалам усреднения показателям качества электроэнергии (отклонение частоты – 10 сек., вместо 20 сек. в ГОСТ 13109–97; не симметрия напряжения – интервал усреднения 10 мин., вместо 3 сек. в ГОСТ 13109–97; гармонические составляющие напряжения – 10 мин., вместо 3 сек. в ГОСТ 13109–97) с интервалом периода в одну неделю, вместо суток в ГОСТ 13109–97.
-	\item Измерения согласно ГОСТ 30804.4.30–2013 (IEC 61000-4-30:2008) \cite{ГОСТ30804.4.30-2013} и ГОСТ 30804.4.7–2013 (IEC 61000-4-7:2009) \cite{ГОСТ30804.4.7-2013}.
+	\item Отличие по интервалам усреднения показателям качества электроэнергии (отклонение частоты -- 10 сек., вместо 20 сек. в ГОСТ 13109-97; не симметрия напряжения -- интервал усреднения 10 мин., вместо 3 сек. в ГОСТ 13109-97; гармонические составляющие напряжения - 10 мин., вместо 3 сек. в ГОСТ 13109-97) с интервалом периода в одну неделю, вместо суток в ГОСТ 13109-97.
+	\item Измерения согласно ГОСТ 30804.4.30-2013 (IEC 61000-4-30:2008) \cite{ГОСТ30804.4.30-2013} и ГОСТ 30804.4.7–2013 (IEC 61000-4-7:2009) \cite{ГОСТ30804.4.7-2013}.
 	\item Для медленных изменений напряжения исключены режимы наименьших и наибольших нагрузок.
 	\item Добавлены таблицы классификации провалов напряжения по остаточному напряжению.
 \end{itemize}
 % [179 - ГОСТ 30804.4.30-2013 (IEC 61000-4-30:2008) Электрическая энергия. Совместимость технических средств электромагнитная. Методы измерений показателей качества электрической энергии (с Поправкой) [Электронный ресурс] / Режим доступа: http://docs.cntd.ru/document/1200104665]
 % [4 - ГОСТ 30804.4.7-2013 (IEC 61000-4-7:2009) Совместимость технических средств электромагнитная. Общее руководство по средствам измерений и измерениям гармоник и интергармоник для систем электроснабжения и подключаемых к ним технических средств (с Поправкой) [Электронный ресурс] / Режим доступа: http://docs.cntd.ru/document/1200103652]
+
+Кроме Российских стандартов, существуют Международные регламентирующие документы по мониторингу КЭ, рекомендация от Института инженеров электротехники (IEEE -- Institute of Electrical and Electronics Engineers) \cite{IEEE_PES}. 
+% [12 -	IEEE PES Power Quality Subcommittee [Электронный ресурс] / Режим доступа: https://site.ieee.org/pes-pq/]
+
+IEEE PES Power Quality Subcommittee (IEEE PES по качеству электроэнергии) участвует в качестве представителя Национального комитета США в Международной конференции и выставке по распределению электроэнергии (CIRED -- Congres International des Reseaux Electriques de Distribution) \cite{CIRED, CIRED_CONFERENCE}. 
+% [197 - INTERNATIONAL CONFERENCE ON ELECTRICITY DISTRIBUTION  [Электронный ресурс] / Режим доступа: http://www.cired.net/]
+
+%[198 - THE 25TH INTERNATIONAL CONFERENCE AND EXHIBITION ON ELECTRICITY DISTRIBUTION [Электронный ресурс] / Режим доступа: http://www.cired2019.org/page/about-cired]
+
+На рисунке \ref{img:picture2} изображены действующие международные стандарты IEEE. 
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.9] {picture2.png}
+	\caption{Группа международных стандартов в области контроля КЭ}
+	\label{img:picture2}
+\end{figure}
+
+Группа международных стандартов в области контроля КЭ:
+\begin{itemize}
+	\item Стандарт IEEE 519-2014 - Рекомендуемая практика и требования IEEE для гармонического управления в электроэнергетических системах (IEEE 519-2014 - IEEE Recommended Practice and Requirements for Harmonic Control in Electric Power Systems)\cite{IEEE_519-2014}. 
+	\item Стандарт IEEE 1159-2019: рекомендуемая практика IEEE для мониторинга качества электроэнергии (IEEE Std 1159-2019 - IEEE Recommended Practice for Monitoring Electric Power Quality)\cite{IEEE_1159-2019}. 
+	\item Стандарт 1159.3-2019: рекомендуемая практика IEEE для формата обмена данными о качестве электроэнергии (IEEE Std 1159.3-2019: IEEE Recommended Practice for Power Quality Data Interchange Format (PQDIF))\cite{IEEE_1159.3-2019}.
+	\item Стандарт IEEE 1250-2018 - Руководство IEEE по выявлению и улучшению качества напряжения в энергосистемах (IEEE 1250-2018 - IEEE Guide for Identifying and Improving Voltage Quality in Power Systems) \cite{IEEE_1250-2018}.
+	\item Стандарт IEEE 1409-2012 - Руководство IEEE по применению силовой электроники для повышения качества электроэнергии в распределительных системах. Номинальные значения: от 1 до 38~кВ. (IEEE 1409-2012 - IEEE Guide for Application of Power Electronics for Power Quality Improvement on Distribution Systems Rated 1 kV Through 38~kV) \cite{1409-2012}.
+	\item Стандарт IEEE 1453-2015 - рекомендуемая практика IEEE для анализа колеблющихся установок в энергосистемах (IEEE 1453-2015 - IEEE Recommended Practice for the Analysis of Fluctuating Installations on Power Systems)\cite{IEEE_1453-2015}.
+	\item Стандарт IEEE 1564-2014 - Руководство IEEE по показателям падения напряжения (IEEE 1564-2014 - IEEE Guide for Voltage Sag Indices)\cite{IEEE_1564-2014}.
+\end{itemize}
+
+Группа международных стандартов описывает факторы, влияющие на КЭ [13-17]
+%
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.9] {picture3.png}
+	\caption{Стандарты, описывающие измерения параметров сети}
+	\label{img:picture3}
+\end{figure}
+
+\begin{figure}[ht]
+	\centering
+	\includegraphics [scale=0.6] {picture4.png}
+	\caption{Стандарты, в области контроля КЭ}
+	\label{img:picture4}
+\end{figure}
+%[200 - IEC 61000-4-30:2015 Electromagnetic compatibility (EMC) - Part 4-30: Testing and measurement techniques - Power quality measurement methods [Электронный ресурс] / Режим доступа: https://webstore.iec.ch/publication/21844#additionalinfo]
+
+%[201 - IEC TR 61000-1-1:1992 Electromagnetic compatibility (EMC) - Part 1: General - Section 1: Application and interpretation of fundamental definitions and terms [Электронный ресурс] / Режим доступа: https://webstore.iec.ch/publication/4120] 
+
+%[202 - IEC 61000-1-2:2016 Electromagnetic compatibility (EMC) - Part 1-2: General - Methodology for the achievement of functional safety of electrical and electronic systems including equipment with regard to electromagnetic phenomena [Электронный ресурс] / Режим доступа: https://webstore.iec.ch/publication/24517]
+
+%[203 - IEC TR 61000-1-3:2002 Electromagnetic compatibility (EMC) - Part 1-3: General - The effects of high-altitude EMP (HEMP) on civil equipment and systems [Электронный ресурс] / Режим доступа: https://webstore.iec.ch/publication/4122]
+
+
 
 
 
