SET biblio latex and text part1

--- a/Dissertation/part1.tex
+++ b/Dissertation/part1.tex
@@ -71,24 +71,24 @@ IEEE PES Power Quality Subcommittee (IEEE PES по качеству электр
 
 %[198 - THE 25TH INTERNATIONAL CONFERENCE AND EXHIBITION ON ELECTRICITY DISTRIBUTION [Электронный ресурс] / Режим доступа: http://www.cired2019.org/page/about-cired]
 
+Группа международных стандартов в области контроля КЭ:
+\begin{itemize}
+	\item Стандарт IEEE 519-2014 - Рекомендуемая практика и требования IEEE для гармонического управления в электроэнергетических системах (IEEE 519-2014 - IEEE Recommended Practice and Requirements for Harmonic Control in Electric Power Systems)\cite{IEEE_519-2014}. 
+	\item Стандарт IEEE 1159-2019: рекомендуемая практика IEEE для мониторинга качества электроэнергии (1159-2019 - IEEE Recommended Practice for Monitoring Electric Power Quality) \cite{IEEE_1159-2019}. 
+	\item Стандарт 1159.3-2019: рекомендуемая практика IEEE для формата обмена данными о качестве электроэнергии (1159.3-2019 - IEEE Recommended Practice for Power Quality Data Interchange Format (PQDIF))\cite{IEEE_1159.3-2019}.
+	\item Стандарт IEEE 1250-2018 - Руководство IEEE по выявлению и улучшению качества напряжения в энергосистемах (IEEE 1250-2018 - IEEE Guide for Identifying and Improving Voltage Quality in Power Systems)\cite{IEEE_1250-2018}.
+	\item Стандарт IEEE 1409-2012 - Руководство IEEE по применению силовой электроники для повышения качества электроэнергии в распределительных системах. Номинальные значения: от 1 до 38~кВ. (IEEE 1409-2012 - IEEE Guide for Application of Power Electronics for Power Quality Improvement on Distribution Systems Rated 1 kV Through 38 kV)\cite{IEEE_1409-2012}.
+	\item Стандарт IEEE 1453-2015 - рекомендуемая практика IEEE для анализа колеблющихся установок в энергосистемах (IEEE 1453-2015 - IEEE Recommended Practice for the Analysis of Fluctuating Installations on Power Systems).
+	\item Стандарт IEEE 1564-2014 - Руководство IEEE по показателям падения напряжения (IEEE 1564-2014 - IEEE Guide for Voltage Sag Indices) \cite{IEEE_1453-2015}.
+\end{itemize}
 На рисунке \ref{img:picture2} изображены действующие международные стандарты IEEE. 
 \begin{figure}[ht]
 	\centering
-	\includegraphics [scale=0.9] {picture2.png}
+	\includegraphics [scale=0.9] {picture2}
 	\caption{Группа международных стандартов в области контроля КЭ}
 	\label{img:picture2}
 \end{figure}
 
-Группа международных стандартов в области контроля КЭ:
-\begin{itemize}
-	\item Стандарт IEEE 519-2014 - Рекомендуемая практика и требования IEEE для гармонического управления в электроэнергетических системах (IEEE 519-2014 - IEEE Recommended Practice and Requirements for Harmonic Control in Electric Power Systems)\cite{IEEE_519-2014}. 
-	\item Стандарт IEEE 1159-2019: рекомендуемая практика IEEE для мониторинга качества электроэнергии (IEEE Std 1159-2019 - IEEE Recommended Practice for Monitoring Electric Power Quality)\cite{IEEE_1159-2019}. 
-	\item Стандарт 1159.3-2019: рекомендуемая практика IEEE для формата обмена данными о качестве электроэнергии (IEEE Std 1159.3-2019: IEEE Recommended Practice for Power Quality Data Interchange Format (PQDIF))\cite{IEEE_1159.3-2019}.
-	\item Стандарт IEEE 1250-2018 - Руководство IEEE по выявлению и улучшению качества напряжения в энергосистемах (IEEE 1250-2018 - IEEE Guide for Identifying and Improving Voltage Quality in Power Systems) \cite{IEEE_1250-2018}.
-	\item Стандарт IEEE 1409-2012 - Руководство IEEE по применению силовой электроники для повышения качества электроэнергии в распределительных системах. Номинальные значения: от 1 до 38~кВ. (IEEE 1409-2012 - IEEE Guide for Application of Power Electronics for Power Quality Improvement on Distribution Systems Rated 1 kV Through 38~kV) \cite{1409-2012}.
-	\item Стандарт IEEE 1453-2015 - рекомендуемая практика IEEE для анализа колеблющихся установок в энергосистемах (IEEE 1453-2015 - IEEE Recommended Practice for the Analysis of Fluctuating Installations on Power Systems)\cite{IEEE_1453-2015}.
-	\item Стандарт IEEE 1564-2014 - Руководство IEEE по показателям падения напряжения (IEEE 1564-2014 - IEEE Guide for Voltage Sag Indices)\cite{IEEE_1564-2014}.
-\end{itemize}
 
 Группа международных стандартов описывает факторы, влияющие на КЭ [13-17]
 %
@@ -140,8 +140,6 @@ IEEE PES Power Quality Subcommittee (IEEE PES по качеству электр
 \cite{ГОСТ13109-67}
 \cite{ГОСТР51317.4.15-2012}
 \cite{ГОСТ8.622-2013}
-05.12.19
-\cite{IEEE519-2014}
 
 
 \section{Ссылки}\label{sec:ch1/sec2}
