--- a/biblio/author.bib
+++ b/biblio/author.bib
@@ -222,7 +222,7 @@
 }
 
 @Standard{ГОСТ33073-2014,
-  title        = {ГОСТ 33073-2014 Электрическая энергия. Совместимость технических средств электромагнитная. Контроль и мониторинг качества электрической энергии в системах электроснабжения общего назначения (с Поправкой)},
+  title        = {{ГОСТ} 33073-2014 Электрическая энергия. Совместимость технических средств электромагнитная. Контроль и мониторинг качества электрической энергии в системах электроснабжения общего назначения (с Поправкой)},
   organization = {М.: Стандартинформ},
   number       = {ГОСТ 33073-2014},
   url          = {http://docs.cntd.ru/document/1200115349},
@@ -418,15 +418,6 @@
   urldate      = {2019-11-16},
 }
 
-@Standard{1159-2019,
-  title      = {1159-2019 - IEEE Recommended Practice for Monitoring Electric Power Quality},
-  year       = {2019},
-  url        = {https://standards.ieee.org/standard/1159-2019.html},
-  annotation = {Действующий},
-  date       = {2019-08-13},
-  urldate    = {2019-12-11},
-}
-
 @Online{IEC,
   author  = {Copyright},
   title   = {International Electrotechnical Commission},
@@ -476,26 +467,26 @@
 }
 
 @Online{IEEE_PES,
-  title   = {IEEE PES Power Quality Subcommittee},
+  title   = {{IEEE} {PES} {P}ower {Q}uality {S}ubcommittee},
   file    = {IEEE PES Power Quality Subcommittee:files/419/pq.html:text/html},
   url     = {https://site.ieee.org/pes-pq/},
   urldate = {2019-12-07},
 }
 
 @Online{CIRED,
-  title   = {INTERNATIONAL CONFERENCE ON ELECTRICITY DISTRIBUTION},
+  title   = {International conference on electricity distribution},
   url     = {https://site.ieee.org/pes-pq/},
   urldate = {2019-12-07},
 }
 
 @Online{CIRED_CONFERENCE,
-  title   = {THE 25TH INTERNATIONAL CONFERENCE AND EXHIBITION ON ELECTRICITY DISTRIBUTION},
+  title   = {The 25th international conference and exhibition on electricity distribution},
   url     = {http://www.cired2019.org/page/about-cired},
   urldate = {2019-12-07},
 }
 
 @Standard{IEEE_1159.3-2019,
-  title      = {1159.3-2019 - IEEE Recommended Practice for Power Quality Data Interchange Format (PQDIF)},
+  title      = {1159.3-2019 - {IEEE} {R}ecommended {P}ractice for {P}ower {Q}uality {D}ata {I}nterchange {F}ormat ({PQDIF})},
   year       = {2019},
   url        = {https://standards.ieee.org/standard/1159_3-2019.html},
   annotation = {Действующий},
@@ -504,7 +495,7 @@
 }
 
 @Standard{IEEE_1159-2009,
-  title      = {IEEE 1159-2009 - IEEE Recommended Practice for Monitoring Electric Power Quality},
+  title      = {{IEEE} 1159-2009 - {IEEE} {R}ecommended {P}ractice for {M}onitoring {E}lectric {P}ower {Q}uality},
   year       = {2009},
   url        = {https://standards.ieee.org/standard/1159-2009.html},
   annotation = {недействующий, заменен на 1159-2019},
@@ -512,15 +503,15 @@
 }
 
 @Standard{IEEE_1159-2019,
-  title      = {1159-2019 - IEEE Recommended Practice for Monitoring Electric Power Quality},
+  title      = {1159-2019 - {IEEE} {R}ecommended {P}ractice for {M}onitoring {E}lectric {P}ower {Q}uality},
   year       = {2019},
   url        = {https://standards.ieee.org/standard/1159-2019.html},
   annotation = {Действующий},
   urldate    = {2019-12-11},
 }
 
-@Standard{1409-2012,
-  title      = {IEEE 1409-2012 - IEEE Guide for Application of Power Electronics for Power Quality Improvement on Distribution Systems Rated 1 kV Through 38 kV},
+@Standard{IEEE_1409-2012,
+  title      = {{IEEE} 1409-2012 - {IEEE} {G}uide for {A}pplication of {P}ower {E}lectronics for {P}ower {Q}uality {I}mprovement on {D}istribution {S}ystems {R}ated 1 k{V} {T}hrough 38 k{V}},
   year       = {2012},
   url        = {https://standards.ieee.org/standard/1409-2012.html},
   annotation = {Действующий},
@@ -529,7 +520,7 @@
 }
 
 @Standard{IEEE_1453-2015,
-  title      = {IEEE 1453-2015 - IEEE Recommended Practice for the Analysis of Fluctuating Installations on Power Systems},
+  title      = {{IEEE} 1453-2015 - {IEEE} {R}ecommended {P}ractice for the {A}nalysis of {F}luctuating {I}nstallations on {P}ower {S}ystems},
   year       = {2015},
   url        = {https://standards.ieee.org/standard/1453-2015.html},
   annotation = {Действующий},
@@ -538,7 +529,7 @@
 }
 
 @Standard{IEEE_1250-2018,
-  title      = {IEEE 1250-2018 - IEEE Guide for Identifying and Improving Voltage Quality in Power Systems},
+  title      = {{IEEE} 1250-2018 - {IEEE} {G}uide for {I}dentifying and {I}mproving {V}oltage {Q}uality in {P}ower systems},
   year       = {2018},
   url        = {https://standards.ieee.org/standard/1250-2018.html},
   annotation = {Действующий},
@@ -546,7 +537,7 @@
 }
 
 @Standard{IEEE_1564-2014,
-  title      = {IEEE 1564-2014 - IEEE Guide for Voltage Sag Indices},
+  title      = {{IEEE} 1564-2014 - {IEEE} {G}uide for {V}oltage {S}ag {I}ndices},
   year       = {2014},
   url        = {https://standards.ieee.org/standard/1564-2014.html},
   annotation = {Действующий},
@@ -555,7 +546,7 @@
 }
 
 @Standard{IEEE_519-2014,
-  title      = {IEEE 519-2014 - IEEE Recommended Practice and Requirements for Harmonic Control in Electric Power Systems},
+  title      = {{IEEE} 519-2014 - {IEEE} {R}ecommended {P}ractice and {R}equirements for {H}armonic {C}ontrol in {E}lectric {P}ower {S}ystems},
   year       = {2014},
   url        = {https://standards.ieee.org/content/ieee-standards/en/standard/519-2014.html},
   annotation = {Действующий},
