SET text part1 and images labIT

--- a/Dissertation/part1.tex
+++ b/Dissertation/part1.tex
@@ -81,6 +81,7 @@ IEEE PES Power Quality Subcommittee (IEEE PES по качеству электр
 	\item Стандарт IEEE 1453-2015 - рекомендуемая практика IEEE для анализа колеблющихся установок в энергосистемах (IEEE 1453-2015 - IEEE Recommended Practice for the Analysis of Fluctuating Installations on Power Systems).
 	\item Стандарт IEEE 1564-2014 - Руководство IEEE по показателям падения напряжения (IEEE 1564-2014 - IEEE Guide for Voltage Sag Indices) \cite{IEEE_1453-2015}.
 \end{itemize}
+
 На рисунке \ref{img:picture2} изображены действующие международные стандарты IEEE. 
 \begin{figure}[ht]
 	\centering
@@ -89,21 +90,20 @@ IEEE PES Power Quality Subcommittee (IEEE PES по качеству электр
 	\label{img:picture2}
 \end{figure}
 
+Группа международных стандартов описывает факторы, влияющие на КЭ \cite{IEEE_519-2014, IEEE_1159-2019, IEEE_1159.3-2019, IEEE_1250-2018, IEEE_1564-2014, IEEE_1409-2012, IEEE_1453-2015, IEEE_1159-2009}:
 
-Группа международных стандартов описывает факторы, влияющие на КЭ [13-17]
-%
+\begin{itemize}
+	\item IEC 61000-4-30:~2015 - Электромагнитная совместимость. Часть 4-30. Методы испытаний и измерений. Методы измерения качества электроэнергии \cite{IEC61000-4-30:2015}.
+	\item IEC TR 61000-1-1:~1992 - Электромагнитная совместимость. Часть 1. Общие положения. Раздел 1. Применение и толкование основных определений и терминов \cite{IEC_TR_61000-1-1:1992}.
+	\item IEC 61000-1-2:~2016 - Электромагнитная совместимость. Часть 1-2. Общие положения. Методология обеспечения функциональной безопасности электрических и электронных систем, включая оборудование в отношении электромагнитных явлений \cite{IEC61000-1-2:2016}.
+	\item IEC TR 61000-1-3:~2002 - Электромагнитная совместимость (ЭМС). Часть 1-3. Общие положения. Воздействие высотной ЭМИ (HEMP) на гражданское оборудование и системы \cite{IECTR61000-1-3:2002}.
+\end{itemize}
+
 \begin{figure}[ht]
 	\centering
-	\includegraphics [scale=0.9] {picture3.png}
-	\caption{Стандарты, описывающие измерения параметров сети}
-	\label{img:picture3}
-\end{figure}
-
-\begin{figure}[ht]
-	\centering
-	\includegraphics [scale=0.6] {picture4.png}
+	\includegraphics [scale=0.9] {picture3}
 	\caption{Стандарты, в области контроля КЭ}
-	\label{img:picture4}
+	\label{img:picture3}
 \end{figure}
 %[200 - IEC 61000-4-30:2015 Electromagnetic compatibility (EMC) - Part 4-30: Testing and measurement techniques - Power quality measurement methods [Электронный ресурс] / Режим доступа: https://webstore.iec.ch/publication/21844#additionalinfo]
 
@@ -113,6 +113,142 @@ IEEE PES Power Quality Subcommittee (IEEE PES по качеству электр
 
 %[203 - IEC TR 61000-1-3:2002 Electromagnetic compatibility (EMC) - Part 1-3: General - The effects of high-altitude EMP (HEMP) on civil equipment and systems [Электронный ресурс] / Режим доступа: https://webstore.iec.ch/publication/4122]
 
+Национальный комитет США Международной электротехнической комиссии (USNC~/~IEC) предоставляет стратегию для эффективного участия в разработке стандартов. USNC участвует почти во всей технической программе Международной электротехнической комиссии (МЭК) и управляет многими ключевыми комитетами и подгруппами.
+
+IEC является ведущей глобальной организацией, которая готовит и публикует международные стандарты для электрических, электронных и смежных технологий. Они служат основой для национальной стандартизации и справочными материалами при разработке международных тендеров и контрактов.
+USNC/IEC является полностью интегрированным комитетом Американского национального института стандартов (ANSI – American National Standards Institute, Incorporated). ANSI служит ключевым ресурсом для стандартов и информации \cite{ANSI}.
+%[204 - American National Standards Institute [Электронный ресурс] / Режим доступа: https://www.ansi.org/standards_activities/iec_programs/overview]
+
+Два российских стандарта были разработаны на основе стандартов Международной Электротехнической Комиссии (International Electrotechnical Commission) IEC 61000-4-30:2008 и IEC 61000-4-7-2002:
+\begin{itemize}
+	\item ГОСТ 30804.4.30–2013 (IEC 61000-4-30:2011) Методы измерений показателей качества электрической энергии \cite{ГОСТ30804.4.30-2013}.
+	\item ГОСТ 30804.4.7–2013 (IEC 61000-4-7:2011) Общее руководство по средствам измерений и измерениям гармоник и интергармоник для систем электроснабжения и подключаемых к ним технических средств \cite{ГОСТ30804.4.7-2013}.
+\end{itemize}
+
+\begin{figure}[p]
+	\centering
+	\includegraphics [scale=0.9] {picture4}
+	\caption{Стандарты, описывающие измерения параметров сети}
+	\label{img:picture4}
+\end{figure}
+
+\section{Показатели качества электроэнергии, характеризующие несинусоидальность напряжения} \label{sec:ch1/sec1_2}
+
+К проблемам КЭ относится множество явлений. Различные причины способствуют на улучшение КЭ и характеристик оборудования \cite{ГОСТ13109-97}.
+%[1 - ГОСТ 13109–97. Электрическая энергия. Совместимость технических средств электромагнитная. Нормы качества электрической энергии в системах электроснабжения общего назначения [Электронный ресурс] – Режим доступа: http://docs.cntd.ru/document/1200006034]
+
+\begin{table} [p]%
+	\caption{Свойства ЭЭ, ПКЭ, виновники ухудшения КЭ}%
+	\label{tbl:test3}% label всегда желательно идти после caption
+	\begin{SingleSpace}
+		\setlength\extrarowheight{6pt} %вот этим управляем расстоянием между рядами, \arraystretch даёт неудачный результат
+		\setlength{\tymin}{1.9cm}% минимальная ширина столбца
+		\begin{tabulary}{\textwidth}{@{}>{\zz}L >{\zz}C >{\zz}C @{}}% Вертикальные полосы не используются принципиально, как и лишние горизонтальные (допускается по ГОСТ 2.105 пункт 4.4.5) % @{} позволяет прижиматься к краям
+			\toprule     %%% верхняя линейка
+			Показатель КЭ & 
+			Свойства ЭЭ &
+			Виновники ухудшения КЭ \\
+			\midrule %%% тонкий разделитель. Отделяет названия столбцов. Обязателен по ГОСТ 2.105 пункт 4.4.5 
+			Установившееся отклонение напряжения ${\delta U_y}$ &
+			Отклонение напряжения &
+			Энергоснабжающая организация \\
+			
+			Размах изменения напряжения~${\delta U_t}$ 
+			
+			Доза фликера ${P_t}$ &
+			Колебания напряжения &
+			Потребитель с переменной нагрузкой \\
+			
+			Коэффициент искажения синусоидальности кривой напряжения ${K_U}$ &
+			Несинусоидальность напряжения &
+			Потребитель с нелинейной нагрузкой \\
+			
+			Коэффициент $n$-oй гармонической составляющей напряжения ${K_{U(n)}}$ &
+			Несинусоидальность напряжения &
+			Потребитель с нелинейной нагрузкой \\
+			
+			Коэффициент несимметрии напряжений по обратной последовательности ${K_{2U}}$ &
+			Несимметрия трехфазной системы напряжений &
+			Потребитель с несимметричной нагрузкой \\
+			
+			Коэффициент несимметрии напряжений по нулевой последовательности ${K_{0U}}$ &
+			Несимметрия трехфазной системы напряжений &
+			Потребитель с несимметричной нагрузкой \\
+			
+			Отклонение частоты ${\Delta f}$ &
+			Отклонение частоты &
+			Энергоснабжающая организация \\
+			
+			Длительность провала напряжения ${\Delta t_p}$ & % Нужно вставить русский символ в формулу ∆t_п
+			Провал напряжения &
+			Энергоснабжающая организация \\
+			
+			Импульсное напряжение ${U_{imp}}$ &
+			Импульс напряжения &
+			Энергоснабжающая организация \\
+			
+			Коэффициент временного перенапряжения ${K_{per U}}$ &
+			Временное перенапряжение &
+			Энергоснабжающая организация \\
+			
+			\bottomrule %%% нижняя линейка
+		\end{tabulary}%
+	\end{SingleSpace}
+\end{table}
+
+Отклонение напряжение – это отличие фактического напряжения работы систем электроснабжения от его номинального значения. Отклонение напряжения происходит под воздействием медленного изменения нагрузки в той или иной точке сети. Это отрицательно влияет на качество и срок службы бытовой электроприборов. Отклонение напряжение влияет на работу электросварочных машин. Так для точечной сварки отклонение напряжения на 15 \% приводит к браку продукции. Чрезмерное повышение напряжение приводит к росту нагрузки тока и мощности короткого замыкания. Для приборов с электрическими схемами реальную опасность представляет перегрев, сбой элементов схемы управления. Если элементы находятся, включены длительное время, то может произойти выход из строя элементов и прибор перестанет выполнять заложенные в него функции.
+
+В диссиртационной работе рассматривается оценка ПКЭ, характеризующая несинусоидальность напряжения. В ГОСТ 32144-2013 \cite{ГОСТ32144-2013}, п. 4.2.4 Несинусоидальность напряжения – искажение синусоидальной формы кривой напряжения.
+% [125 - ГОСТ 32144-2013 Электрическая энергия. Совместимость технических средств электромагнитная. Нормы качества электрической энергии в системах электроснабжения общего назначения [Электронный ресурс] – Режим доступа: http://docs.cntd.ru/document/1200104301/]
+
+Гармонические составляющие напряжения обусловлены нелинейными нагрузками электрических сетей, которые подключаются к сетям различного напряжения. Гармонические токи, полные сопротивления электрических сетей, напряжения гармонических составляющих в точках передачи ЭЭ изменяются во времени.
+
+Если нагрузка в системе линейная, то и токи во всех ветвях синусоидальны. Наличие нелинейной нагрузки приводит к возникновению несинусоидальных токов во всех ветвях электрической сети, что приводит к возникновению несинусоидальной кривой напряжения во всех точках сети, что отрицательно влияет на работу электрической сети. 
+% Нужен ли рисунок Несинусоидальность напряжения?
+
+Нелинейные и коммутируемые нагрузки могут вызвать искажения нормальных синусоидальных сигналов тока и напряжения в системе переменного тока. Источники искажений: силовые трансформаторы, преобразовательные устройства переменного тока.
+
+Анализ несинусоидальности напряжения является составной частью системы эксплуатационного контроля КЭ. Для этого на шинах управления соответствующих контрольных пунктов устанавливают анализаторы несинусоидальности, которые соединены с регистрирующими приборами. Разлагают на спектральные составляющие, чтобы проанализировать несинусоидальность режимов напряжения. Поэтому, для повышения точности измерения показателей несинусоидальности напряжения необходимо повышать точность оценки гармонических и интергармонических составляющих напряжения. 
+
+Существуют различия между утратившим силу стандартом ГОСТ 13109–97 \cite{ГОСТ13109-97} и действующим ГОСТ 32144-2013 \cite{ГОСТ32144-2013}.
+
+%[1 - ГОСТ 13109–97. Электрическая энергия. Совместимость технических средств электромагнитная. Нормы качества электрической энергии в системах электроснабжения общего назначения [Электронный ресурс] – Режим доступа: http://docs.cntd.ru/document/1200006034]
+
+% [125 - ГОСТ 32144-2013 Электрическая энергия. Совместимость технических средств электромагнитная. Нормы качества электрической энергии в системах электроснабжения общего назначения [Электронный ресурс] – Режим доступа: http://docs.cntd.ru/document/1200104301/]
+
+Сравнительный анализ стандартов качества электрической энергии ГОСТ 13109–97 и ГОСТ 32144–2013 \cite{ГОСТ_13109–97_и_ГОСТ_32144–2013}
+% [205 - Киселёв Б. Ю. Сравнительный анализ стандартов качества электрической энергии ГОСТ 13109–97 и ГОСТ 32144–2013 // Молодой ученый. — 2016. — №20. — С. 155-157. — URL https://moluch.ru/archive/124/34114/ (дата обращения: 09.10.2019)]
+С. 155-157
+
+Основные отличия в ГОСТ 32144-2013:
+\begin{itemize}
+	\item Изменен интервал времени, соответствующий расчетному интервалу времени на одну неделю.
+	\item Изменения характеристик ЭЭ разделены на две категории – продолжительные изменения характеристик напряжения и случайные события.
+	\item Процедура проведения контроля производится на основе ГОСТ~Р~51317.4.30–2008 \cite{ГОСТР51317.4.30-2008} и ГОСТ~Р~51317.4.7–2008 \cite{ГОСТР51317.4.7-2008}.
+	\item Введены интергармонические составляющие напряжения, хотя ни каких ограничений по их отклонению пока нет, они находятся на стадии разработки.
+	\item Вместо коэффициента искажения синусоидальности кривой напряжения несинусоидальность напряжения характеризуется суммарным коэффициентом гармонических составляющих.
+\end{itemize} 
+
+% ГОСТ Р 51317.4.30-2008 (Недействующий) -> ГОСТ 30804.4.30-2013 (Действующий)
+% [3 - ГОСТ Р 51317.4.30-2008 (МЭК 61000-4-30:2008). Совместимость технических средств электромагнитная. Методы измерений показателей качества электрической энергии [Электронный ресурс] – Режим доступа: http://docs.cntd.ru/document/1200072576]
+% [179 - ГОСТ 30804.4.30–2013 (IEC 61000-4-30:2008) Электрическая энергия. Совместимость технических средств электромагнитная. Методы измерений показателей качества электрической энергии [Электронный ресурс] – Режим доступа: http://docs.cntd.ru/document/1200104665]
+
+% ГОСТ Р 51317.4.7–2008 (Недействующий) -> ГОСТ 30804.4.7-2013 (Действующий)
+% [4 - ГОСТ 30804.4.7-2013 (IEC 61000-4-7:2009) Совместимость технических средств электромагнитная. Общее руководство по средствам измерений и измерениям гармоник и интергармоник для систем электроснабжения и подключаемых к ним технических средств.]
+
+В ГОСТ 13109-97 [1] коэффициент искажения синусоидальности кривой напряжения $K_U$ определен как \eqref{eq:$K_U$}:
+
+\begin{equation}
+\label{eq:$K_U$}
+K_U = \frac{\sqrt{\sum_{n=2}^N {U_{(n)}}^2}}{U_{(1)}}\cdot 100 \%
+\end{equation}
+
+где $U_{(n)}$ -- Действующее значение $n$-ой гармонической составляющей напряжения;
+$n$ -- Порядок гармонической составляющей напряжения;
+$N$ -- Порядок последней из учитываемых гармонических составляющих напряжения (стандартом устанавливается $N=40$);
+$U_{(1)}$ -- Действующее значение напряжения основной частоты.
+
+
 
 
 
@@ -120,6 +256,9 @@ IEEE PES Power Quality Subcommittee (IEEE PES по качеству электр
 %\chapter{Оформление различных элементов}\label{ch:ch1}
 %\section{Форматирование текста}\label{sec:ch1/sec1}
 %Мы можем сделать \textbf{жирный текст} и \textit{курсив}.
+%\section{Ссылки}\label{sec:ch1/sec2}
+
+
 
 Стандарты:
 \cite{ГОСТ30804.4.7-2013}
@@ -142,7 +281,6 @@ IEEE PES Power Quality Subcommittee (IEEE PES по качеству электр
 \cite{ГОСТ8.622-2013}
 
 
-\section{Ссылки}\label{sec:ch1/sec2}
 
 Ссылки на собственные работы:
 
