--- a/biblio/author.bib
+++ b/biblio/author.bib
@@ -554,4 +554,51 @@
   urldate    = {2019-12-12},
 }
 
+@Standard{IEC61000-4-30:2015,
+  title      = {{IEC} 61000-4-30:2015},
+  year       = {2015},
+  url        = {https://webstore.iec.ch/publication/21844#additionalinfo},
+  annotation = {Действующий},
+  urldate    = {2019-12-14},
+}
+
+@Standard{IEC_TR_61000-1-1:1992,
+  title      = {{IEC} {TR} 61000-1-1:1992},
+  year       = {1992},
+  url        = {https://webstore.iec.ch/publication/4120},
+  annotation = {Действующий},
+  urldate    = {2019-12-14},
+}
+
+@Standard{IEC61000-1-2:2016,
+  title      = {{IEC} 61000-1-2:2016},
+  year       = {2016},
+  url        = {https://webstore.iec.ch/publication/24517},
+  annotation = {Действующий},
+  urldate    = {2019-12-16},
+}
+
+@Standard{IECTR61000-1-3:2002,
+  title      = {{IEC} {TR} 61000-1-3:2002},
+  year       = {2002},
+  url        = {https://webstore.iec.ch/publication/4122},
+  annotation = {Действующий},
+  urldate    = {2019-12-16},
+}
+
+@Online{ANSI,
+  title   = {American National Standards Institute ({ANSI})},
+  url     = {https://www.ansi.org/standards_activities/iec_programs/overview},
+  urldate = {2019-12-16},
+}
+
+@Article{ГОСТ_13109–97_и_ГОСТ_32144–2013,
+  author  = {Киселёв Богдан Юрьевич},
+  title   = {Сравнительный анализ стандартов качества электрической энергии {ГОСТ} 13109–97 и {ГОСТ} 32144–2013},
+  journal = {Молодой ученый №20},
+  year    = {2016},
+  url     = {https://moluch.ru/archive/124/34114/},
+  urldate = {2019-12-18},
+}
+
 @Comment{jabref-meta: databaseType:bibtex;}
