--- a/Dissertation/part1.tex
+++ b/Dissertation/part1.tex
@@ -236,7 +236,7 @@ USNC/IEC является полностью интегрированным ко
 % ГОСТ Р 51317.4.7–2008 (Недействующий) -> ГОСТ 30804.4.7-2013 (Действующий)
 % [4 - ГОСТ 30804.4.7-2013 (IEC 61000-4-7:2009) Совместимость технических средств электромагнитная. Общее руководство по средствам измерений и измерениям гармоник и интергармоник для систем электроснабжения и подключаемых к ним технических средств.]
 
-В ГОСТ 13109-97 [1] коэффициент искажения синусоидальности кривой напряжения $K_U$ определен как \eqref{eq:$K_U$}:
+В ГОСТ 13109-97 \cite{ГОСТ13109-97} коэффициент искажения синусоидальности кривой напряжения $K_U$ определен как \eqref{eq:$K_U$}:
 
 \begin{equation}
 \label{eq:$K_U$}
@@ -245,12 +245,244 @@ K_U = \frac{\sqrt{\sum_{n=2}^N {U_{(n)}}^2}}{U_{(1)}}\cdot 100 \%
 
 где $U_{(n)}$ -- Действующее значение $n$-ой гармонической составляющей напряжения;
 $n$ -- Порядок гармонической составляющей напряжения;
+
 $N$ -- Порядок последней из учитываемых гармонических составляющих напряжения (стандартом устанавливается $N=40$);
+
 $U_{(1)}$ -- Действующее значение напряжения основной частоты.
 
+\begin{equation}
+\label{eq:$K_U2$}
+K_U = \frac{\sqrt{\sum_{n=2}^N {U_{(n)}}^2}}{U_{nom}}\cdot 100 \%
+\end{equation}
 
+% Таблица 1.2
+\begin{table} [p]%
+	\caption{Значения коэффициентов нечетных гармонических составляющих напряжения не кратных трем}%
+	\label{tbl:test3}% label всегда желательно идти после caption
+	\begin{SingleSpace}
+		\setlength\extrarowheight{6pt} %вот этим управляем расстоянием между рядами, \arraystretch даёт неудачный результат
+		\setlength{\tymin}{1.9cm}% минимальная ширина столбца
+		\begin{tabulary}{\textwidth}{@{}>{\zz}C >{\zz}C >{\zz}C >{\zz}C >{\zz}C @{}}% Вертикальные полосы не используются принципиально, как и лишние горизонтальные (допускается по ГОСТ 2.105 пункт 4.4.5) % @{} позволяет прижиматься к краям
+			\toprule     %%% верхняя линейка
+			Порядок гармонической составляющей~$n$ & 
+			\multicolumn{4}{|l|}{Значения коэффициентов гармонических}  \\
+			&
+			\multicolumn{4}{|l|}{составляющих напряжения $K_{U(n)}$ ,\% ${U_1}$}\\		
+			&
+			\multicolumn{4}{|l|}{Напряжение электрической сети, кВ} \\			
+			&
+			$0,38$ кВ &
+			$6-25$~кВ &
+			$35$ кВ  &
+			$110-220$~кВ \\
+			\midrule %%% тонкий разделитель. Отделяет названия столбцов. Обязателен по ГОСТ 2.105 пункт 4.4.5 
+			$5$ &
+			$6$ &
+			$4$ &
+			$3$ &
+			$1,5$ \\
+			
+			$7$ &
+			$5$ &
+			$3$ &
+			$2,5$&
+			$1$ \\
+			
+			$11$ &
+			$3,5$ &
+			$2$ &
+			$2$ &
+			$1$ \\
+			
+			$13$ &
+			$3,0$ &
+			$2$ &
+			$1,5$ &
+			$0,7$\\
+			
+			$17$ &
+			$2,0$ &
+			$1,5$ &
+			$1$ &
+			$0,5$\\
+			
+			$19$ &
+			$1,5$ &
+			$1$	&
+			$1$ &
+			$0,4$\\
+			
+			$23$ &
+			$1,5$ &
+			$1$ &
+			$1$ &
+			$0,4$\\
+			
+			$25$ &
+			$1,5$ &
+			$1$ &
+			$1$ &
+			$0,4$\\
+			
+			$>25$ &
+			$1,5$ &
+			$1$ &
+			$1$ &
+			$0,4$\\
+			
+			\bottomrule %%% нижняя линейка
+		\end{tabulary}%
+	\end{SingleSpace}
+\end{table}
 
+%Таблица 1.3
+\begin{table} [p]%
+	\caption{Значения коэффициентов нечетных гармонических  составляющих напряжения кратных трем}%
+	\label{tbl:test3}% label всегда желательно идти после caption
+	\begin{SingleSpace}
+		\setlength\extrarowheight{6pt} %вот этим управляем расстоянием между рядами, \arraystretch даёт неудачный результат
+		\setlength{\tymin}{1.9cm}% минимальная ширина столбца
+		\begin{tabulary}{\textwidth}{@{}>{\zz}C >{\zz}C >{\zz}C >{\zz}C >{\zz}C @{}}% Вертикальные полосы не используются принципиально, как и лишние горизонтальные (допускается по ГОСТ 2.105 пункт 4.4.5) % @{} позволяет прижиматься к краям
+			\toprule     %%% верхняя линейка
+			Порядок гармонической составляющей~$n$ & 
+			\multicolumn{4}{|l|}{Значения коэффициентов гармонических}  \\
+			&
+			\multicolumn{4}{|l|}{составляющих напряжения $K_{U(n)}$ ,\% ${U_1}$}\\		
+			&
+			\multicolumn{4}{|l|}{Напряжение электрической сети, кВ} \\			
+			&
+			$0,38$ кВ &
+			$6-25$~кВ &
+			$35$ кВ  &
+			$110-220$~кВ \\
+			\midrule %%% тонкий разделитель. Отделяет названия столбцов. Обязателен по ГОСТ 2.105 пункт 4.4.5 
+			$3$ &
+			$5$ &
+			$3$ &
+			$3$ &
+			$1,5$ \\
+			
+			$9$ &
+			$1,5$ &
+			$1$ &
+			$1$&
+			$0,4$ \\
+			
+			$15$ &
+			$0,3$ &
+			$0,3$ &
+			$0,3$ &
+			$0,2$ \\
+			
+			$21$ &
+			$0,2$ &
+			$0,2$ &
+			$0,2$ &
+			$0,2$\\
+			
+			
+			$>21$ &
+			$0,2$ &
+			$0,2$ &
+			$0,2$ &
+			$0,2$\\
+			
+			\bottomrule %%% нижняя линейка
+		\end{tabulary}%
+	\end{SingleSpace}
+\end{table}
 
+% Таблица 1.4
+\begin{table} [p]%
+	\caption{Значения нечетных гармонических составляющих напряжения}%
+	\label{tbl:test3}% label всегда желательно идти после caption
+	\begin{SingleSpace}
+		\setlength\extrarowheight{6pt} %вот этим управляем расстоянием между рядами, \arraystretch даёт неудачный результат
+		\setlength{\tymin}{1.9cm}% минимальная ширина столбца
+		\begin{tabulary}{\textwidth}{@{}>{\zz}C >{\zz}C >{\zz}C >{\zz}C >{\zz}C @{}}% Вертикальные полосы не используются принципиально, как и лишние горизонтальные (допускается по ГОСТ 2.105 пункт 4.4.5) % @{} позволяет прижиматься к краям
+			\toprule     %%% верхняя линейка
+			Порядок гармонической составляющей~$n$ & 
+			\multicolumn{4}{|l|}{Значения коэффициентов гармонических}  \\
+			&
+			\multicolumn{4}{|l|}{составляющих напряжения $K_{U(n)}$ ,\% ${U_1}$}\\		
+			&
+			\multicolumn{4}{|l|}{Напряжение электрической сети, кВ} \\			
+			&
+			$0,38$ кВ &
+			$6-25$~кВ &
+			$35$ кВ  &
+			$110-220$~кВ \\
+			\midrule %%% тонкий разделитель. Отделяет названия столбцов. Обязателен по ГОСТ 2.105 пункт 4.4.5 
+			$2$ &
+			$2$ &
+			$1,5$ &
+			$1$ &
+			$0,5$ \\
+			
+			$4$ &
+			$1$ &
+			$0,7$ &
+			$0,5$&
+			$0,3$ \\
+			
+			$6$ &
+			$0,5$ &
+			$0,3$ &
+			$0,3$ &
+			$0,2$ \\
+			
+			$8$ &
+			$0,5$ &
+			$0,3$ &
+			$0,3$ &
+			$0,2$ \\
+			
+			$10$ &
+			$0,5$ &
+			$0,3$ &
+			$0,3$ &
+			$0,2$ \\
+			
+			$12$ &
+			$0,2$ &
+			$0,2$ &
+			$0,2$ &
+			$0,2$ \\
+			
+			$>12$ &
+			$0,2$ &
+			$0,2$ &
+			$0,2$ &
+			$0,2$\\
+			
+			\bottomrule %%% нижняя линейка
+		\end{tabulary}%
+	\end{SingleSpace}
+\end{table}
+
+%Таблица 1.5
+\begin{table} [ht]%
+	\caption{Значения суммарных коэффициентов гармонических составляющих напряжения}%
+	\label{tbl:test3}% label всегда желательно идти после caption
+	\begin{SingleSpace}
+		\setlength\extrarowheight{6pt} %вот этим управляем расстоянием между рядами, \arraystretch даёт неудачный результат
+		\setlength{\tymin}{1.9cm}% минимальная ширина столбца
+		\begin{tabulary}{\textwidth}{@{} >{\zz}C >{\zz}C >{\zz}C >{\zz}C @{}}% Вертикальные полосы не используются принципиально, как и лишние горизонтальные (допускается по ГОСТ 2.105 пункт 4.4.5) % @{} позволяет прижиматься к краям
+			\toprule     %%% верхняя линейка%			\toprule     %%% верхняя линейка
+			\multicolumn{4}{c}{Значения коэффициентов гармонических составляющих напряжения $K_{U(n)}$ ,\% ${U_1}$}  \\
+			\multicolumn{4}{c}{Напряжение электрической сети, кВ} \\			
+			
+			\midrule %%% тонкий разделитель. Отделяет названия столбцов. Обязателен по ГОСТ 2.105 пункт 4.4.5 
+			
+			$0,38$ кВ &
+			$6-25$~кВ &
+			$35$ кВ  &
+			$110-220$~кВ \\
+			%			\midrule %%% тонкий разделитель. Отделяет названия столбцов. Обязателен по ГОСТ 2.105 пункт 4.4.5 				
+			\bottomrule %%% нижняя линейка
+		\end{tabulary}%
+	\end{SingleSpace}
+\end{table}
 
 
 %\chapter{Оформление различных элементов}\label{ch:ch1}
