SET part 1, part2

--- a/biblio/author.bib
+++ b/biblio/author.bib
@@ -592,13 +592,87 @@
   urldate = {2019-12-16},
 }
 
-@Article{ГОСТ_13109–97_и_ГОСТ_32144–2013,
+@Article{Киселёв,
   author  = {Киселёв Богдан Юрьевич},
   title   = {Сравнительный анализ стандартов качества электрической энергии {ГОСТ} 13109–97 и {ГОСТ} 32144–2013},
   journal = {Молодой ученый №20},
   year    = {2016},
   url     = {https://moluch.ru/archive/124/34114/},
   urldate = {2019-12-18},
+}
+
+@Book{левин1975качество,
+  title     = {Качество электроэнергии в сетях сельских районов},
+  publisher = {Энергия},
+  year      = {1975},
+  author    = {Левин, Моисей Соломонович and Мурадян, Артик Егорович and Сырых, Николай Николаевич},
+}
+
+@Online{prist,
+  title   = {{АО} <<{П}ри{СТ}>>},
+  url     = {https://prist.ru/},
+  urldate = {2019-12-22},
+}
+
+@Online{parma,
+  title   = {{К}омпания <<{ПАРМА}>>},
+  url     = {https://parma.spb.ru/company/about-company/},
+  urldate = {2019-12-22},
+}
+
+@Online{parma1,
+  title   = {{М}ногофункциональные измерительные преобразователи компании <<{ПАРМА}>>},
+  url     = {https://parma.spb.ru/oborudovanie/mnogofunktsionalnye-izmeritelnye-preobrazovateli/},
+  urldate = {2020-01-09},
+}
+
+@Online{parma2,
+  title   = {{Р}егистратор качества электрической энергии компании <<{ПАРМА}>>},
+  url     = {https://parma.spb.ru/oborudovanie/registratory-kachestva-elektroenergii/},
+  urldate = {2020-01-09},
+}
+
+@Online{Марс-Энерго,
+  title    = {{Э}лектроизмерительные приборы от производителя {НПП} {М}арс-{Э}нерго},
+  note     = {{ISO} 9001:2015},
+  abstract = {Проектирование, производство, обслуживании высокоточных электроизмерительных приборов и поверочных установок для электроэнергетики},
+  date     = {1999},
+  file     = {Snapshot:files/526/www.mars-energo.ru.html:text/html},
+  url      = {http://www.mars-energo.ru},
+  urldate  = {2020-01-09},
+}
+
+@Online{энерготестер,
+  title   = {{Э}нерготестер {ПКЭ-А}},
+  url     = {http://www.mars-energo.ru/home/pribory-kontrolya-kachestva-i-ucheta-elektroenergii/energotester-pke-a.html},
+  urldate = {2020-01-09},
+}
+
+@Online{noauthor__2009-2,
+  title   = {{ООО} {Н}аучно-производственное предприятие <<{Э}нерготехника>>},
+  date    = {2009},
+  file    = {Главная:files/528/www.entp.ru.html:text/html},
+  url     = {http://www.entp.ru/},
+  urldate = {2020-01-09},
+}
+
+@Online{энергосоюз,
+  title   = {{НПФ} <<{ЭНЕРГОСОЮЗ}>>},
+  file    = {НПФ "ЭНЕРГОСОЮЗ":files/530/www.energosoyuz.spb.ru.html:text/html},
+  url     = {https://www.energosoyuz.spb.ru/},
+  urldate = {2020-01-09},
+}
+
+@Online{нева-па,
+  title   = {{У}стройство противоаварийной автоматики <<НЕВА-ПА>>},
+  url     = {https://www.energosoyuz.spb.ru/ru/content/ustroystvo-protivoavariynoy-avtomatiki-neva-pa},
+  urldate = {2020-01-09},
+}
+
+@Online{прорыв,
+  title   = {{П}редприятие НПФ <<Прорыв>>},
+  url     = {https://proryvnpp.ru/},
+  urldate = {2020-01-09},
 }
 
 @Comment{jabref-meta: databaseType:bibtex;}
